作业/12-26作业/istio/httpserver-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpserver-vs
  namespace: httpserver
spec:
  hosts:
    - "cantevenl.com"
  gateways:
    - httpserver-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: cantevenl-httpserver-svc  #service的name
            port:
              number: 80
